cmake_minimum_required(VERSION 3.0)

project(CARLAUtils)
set(PROJECT_VERSION "git")
cmake_policy(SET CMP0057 NEW)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(Python COMPONENTS Interpreter Development REQUIRED)
find_package(pybind11 CONFIG REQUIRED)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}")

# CARLA map source.
file(GLOB_RECURSE CARLA_MAP_HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE CARLA_MAP_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

# CARLA map.
pybind11_add_module(map ${CARLA_MAP_HEADERS} ${CARLA_MAP_SOURCES})
